try fixing TikZ + knitr incompatibility

--- a/01-preface.Rmd
+++ b/01-preface.Rmd
@@ -7,7 +7,7 @@ the effects of interest. We will focus on the two types of graph:
 
 ### No intermediate confounders
 
-```{tikz, fig.cap = "Directed acylcic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment", fig.ext = 'png', cache = TRUE, echo = FALSE}
+```{r, engine="tikz", fig.cap = "Directed acylcic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment", fig.ext = "pdf", echo = FALSE}
 \dimendef\prevdepth=0
 \pgfdeclarelayer{background}
 \pgfsetlayers{background,main}
@@ -66,9 +66,10 @@ shorten >=2pt,}
   \ArrowL{W}{M}{black}
 \end{tikzpicture}
 ```
+
 ### Intermediate confounders
 
-```{tikz, fig.cap = "Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment", fig.ext = 'png', cache = TRUE, echo = FALSE}
+```{r, engine="tikz", fig.cap = "Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment", fig.ext = "pdf", echo = FALSE}
 \dimendef\prevdepth=0
 \pgfdeclarelayer{background}
 \pgfsetlayers{background,main}
