--- a/02-effects-def.Rmd
+++ b/02-effects-def.Rmd
@@ -155,7 +155,7 @@ ID: Kara, I copied what I had written below, feel free to reuse
 
 Consider the following directed acyclic graph.
 
-```{tikz, fig.cap = "Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment", fig.ext = 'png', cache = TRUE, echo = FALSE}
+```{r, engine="tikz", fig.cap = "Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment", fig.ext = "pdf", echo = FALSE}
 \dimendef\prevdepth=0
 \pgfdeclarelayer{background}
 \pgfsetlayers{background,main}
@@ -265,4 +265,9 @@ they are identifiable. Specifically:
   set to $M=G(0)$ with porbability one.
 - Define $Y(0,G(0))$ and $Y(1,G(1))$ similarly
 - Then we can define:
-\[\E[Y(1,G(1)) - Y(0,G(0))]=\underbrace{\E[Y(1,G(1))-Y(1,G(0))]}_{\text{interventional indirect effect}}+\underbrace{\E[Y(1,G(0))-Y(0,G(0))]}_{\text{interventional direct effect}}\]
+  \begin{equation*}
+    \E[Y(1,G(1)) - Y(0,G(0))] = \underbrace{\E[Y(1,G(1)) -
+      Y(1,G(0))]}_{\text{interventional indirect effect}} +
+      \underbrace{\E[Y(1,G(0)) -
+      Y(0,G(0))]}_{\text{interventional direct effect}}
+  \end{equation*}
