--- a/book.bib
+++ b/book.bib
@@ -806,3 +806,14 @@ year = "2014"
   year={2001},
   publisher={Springer}
 }
+
+@article{vanderweele2016mediation,
+  title={Mediation analysis: a practitioner's guide},
+  author={VanderWeele, Tyler J},
+  journal={Annual review of public health},
+  volume={37},
+  pages={17--32},
+  year={2016},
+  publisher={Annual Reviews}
+}
+
