--- a/04-stochastic.Rmd
+++ b/04-stochastic.Rmd
@@ -4,7 +4,7 @@
 
 Consider the following directed acyclic graph.
 
-```{tikz, fig.cap = "Directed acylcic graph under _no intermediate confounders_ of the mediator-outcome relation affected by treatment", fig.ext = 'png', cache = TRUE, echo = FALSE}
+```{r, engine="tikz", fig.cap = "Directed acylcic graph under _no intermediate confounders_ of the mediator-outcome relation affected by treatment", fig.ext = "pdf", echo = FALSE}
 \dimendef\prevdepth=0
 \pgfdeclarelayer{background}
 \pgfsetlayers{background,main}
@@ -63,6 +63,7 @@ shorten >=2pt,}
   \ArrowL{W}{M}{black}
 \end{tikzpicture}
 ```
+
 ## Motivation for stochastic interventions
 
 - So far we have discussed effects for binary exposures
